<resources>
    <string name="app_name">LightTimer</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="title_activity_blank_screen">BlankScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hour_s">Hour(s)</string>
    <string name="minute_s">Minute(s)</string>
    <string name="second_s">Second(s)</string>

    <color name="red">#FF0000</color>
</resources>